# got-dot-plot

./: .gitignore  README.md  dotplot.py  pyproject.toml
tests/: test_dotplot.py
tests/data/: seq_x.fasta  seq_y.fasta
