[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dotplot"]

[project]
name = "got-dot-plot"
version = "0.1.0"
description = "A python tool to create dotplots from a pair of FASTA files"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["biopython>=1.80","plotly>=5.0"]

[project.scripts]
got-dot-plot = "dotplot:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
